[gd_scene load_steps=2 format=3 uid="uid://dialogue_box_scene"]

[ext_resource type="Script" path="res://scripts/ui/DialogueBox.gd" id="1_script"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Portraits" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftPortrait" type="TextureRect" parent="Portraits"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="RightPortrait" type="TextureRect" parent="Portraits"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CentralOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="CharacterName" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Character Name"

[node name="DialogueText" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Dialogue text goes here. This can be multiple lines of text that wrap naturally."
autowrap_mode = 3

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "â–¼ Click to continue"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AutoToggleButton" type="Button" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Auto: OFF"

[node name="CloseButton" type="Button" parent="DialoguePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"
